logs/restore.log
/home/varsmana/adminko_site/scripts/auto-blogger.js:56
    clean = clean.replace(/^[\s]*[-*•] (.*)/gm, '<li class="relative pl-8 mb-4 before:content-[\\'—\\'] before:absolute before:left-0 before:text-primary before:font-black text-lg">$1</li>');
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/varsmana/adminko_site/scripts/restore-articles.js:3:33)

Node.js v22.22.0
